--- a/handlebars/views/home.handlebars
+++ b/handlebars/views/home.handlebars
@@ -4,4 +4,7 @@ e seu email é {{user.email}}
 </p>
 
 {{#if auth}}
-    
+    <p>
+        Você está autenticado,<a href="/handlebars/views/layouts/page.handlebars">clique aqui</a> para acessar a área de admin
+    </p>
+{{/if}}
