--- a/handlebars/views/home.handlebars
+++ b/handlebars/views/home.handlebars
@@ -2,9 +2,14 @@
 <p>Projeto de {{user.name}} tem {{user.age}} anos
 e seu email é {{user.email}}
 </p>
+{{#if approved}}
+    <p>Parabéns, você foi cadastrado!</p>
+{{else}}
+    <p>É Necessário se regostrar preenchendo os dados corretamente</p>
+{{/if}}
 
 {{#if auth}}
     <p>
-        Você está autenticado,<a href="/handlebars/views/layouts/page.handlebars">clique aqui</a> para acessar a área de admin
+        Você está autenticado,<a href="/page">clique aqui</a> para acessar a área de sobre mim
     </p>
 {{/if}}
